dropdown issue fixed, changed clear icon visibility condition and get refreshed assets in a interval

--- a/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
+++ b/src/app/components/core/asset-readings/readings-graph/readings-graph.component.css
@@ -10,6 +10,7 @@
 
 .modal-card-body {
   padding: 15px !important;
+  overflow: visible;
 }
 
 @media screen and (min-width: 769px) {
